--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.21"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.21",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "jest": "^26.1.0",
